--- a/src/components/card/card.module.css
+++ b/src/components/card/card.module.css
@@ -17,12 +17,13 @@
     justify-content: center;
     align-items: center;
     position: relative;
+    margin: 15px 0;
 }
 .card img{
     width: 100%;
 }
 .card .name{
-    font-size: 2rem;
+    font-size: 1.5rem;
     margin: 30px 0 10px 0;
 }
 .card:hover .actions{
