--- a/src/components/favs/favs.module.css
+++ b/src/components/favs/favs.module.css
@@ -2,6 +2,12 @@
     width: 100%;
     display: flex;
     justify-content: center;
-    flex-direction: column;
+    flex-direction: row;
+    flex-wrap: wrap;
     align-items: center;
+}
+
+h2{
+    width: 100vw;
+    text-align: center;
 }
